[package]
name = "nostd_async"
version = "0.8.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"
rust-version = "1.68.0"
description = "An asyncronous runtime for a single-threaded no_std environment"
documentation = "https://docs.rs/nostd_async"
readme = "README.md"
homepage = "https://github.com/sammhicks/nostd_async"
repository = "https://github.com/sammhicks/nostd_async"
license = "MIT"
keywords = ["asynchronous", "async", "embedded", "no-std", "nostd"]
categories = ["asynchronous", "embedded", "no-std"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

